--- a/frontend/public/i18n/de_common.json
+++ b/frontend/public/i18n/de_common.json
@@ -4,6 +4,9 @@
     "VOD": "VOD",
     "SERIES": "Serien",
     "SAVE": "Speichern",
+    "SUBMIT": "Übernehmen",
+    "OK": "Ok",
+    "CANCEL": "Abbrechen",
     "SHOW_SELECTED": "Ausgewählte anzeigen",
     "SELECT_ALL": "Alle auswählen",
     "DESELECT_ALL": "Alle abwählen",
