--- a/frontend/public/i18n/tr_common.json
+++ b/frontend/public/i18n/tr_common.json
@@ -4,6 +4,9 @@
     "VOD": "Video",
     "SERIES": "Diziler",
     "SAVE": "Kaydet",
+    "SUBMIT": "Onayla",
+    "OK": "Tamam",
+    "CANCEL": "İptal",
     "SHOW_SELECTED": "Seçilenleri Göster",
     "SELECT_ALL": "Tümünü Seç",
     "DESELECT_ALL": "Tümünü Seçimden Çıkar",
