added custom toolip and hint for some fields in web ui

--- a/frontend/public/i18n/en_common.json
+++ b/frontend/public/i18n/en_common.json
@@ -123,5 +123,18 @@
     "SCHEDULE_EXAMPLE": "Schedule example",
     "THREADS": "Threads: keep it 0 if you have no problems. Increase it if you have multiple providers. Accessing you provider parallel can cause a ban.",
     "WEB_ROOT": "Web-Root: Contains the web-ui files. They are normally placed in the same directory under ./web"
+  },
+  "HINT": {
+    "CONFIG": {
+      "API_PROXY": {
+        "PATH": "URL path prefix"
+      },
+      "LOG": {
+        "ACTIVE_CLIENTS": "Activates active clients info log"
+      },
+      "PROXY": {
+       "RESOURCE_REWRITE_DISABLE": "If activated the URL rewrite of resources in reverse proxy mode is disabled"
+      }
+    }
   }
 }
