worked on playlist browser, fixed input filter fixed disabled webauth exception when no api_user exists

--- a/frontend/public/i18n/en_common.json
+++ b/frontend/public/i18n/en_common.json
@@ -80,7 +80,8 @@
     "PROVIDER": "Provider",
     "CUSTOM": "Custom",
     "XTREAM_CODES": "xtream codes",
-    "M3U": "m3u"
+    "M3U": "m3u",
+    "PLAYLIST_BROWSER": "Playlist Browser"
   },
   "TITLE": {
     "USER_BOUQUET_EDITOR": "User group editor"
