added throttle_kbps to fe preferences

--- a/frontend/public/assets/i18n/en_common.json
+++ b/frontend/public/assets/i18n/en_common.json
@@ -29,6 +29,7 @@
     "ACTIVE_CLIENTS": "Active Clients",
     "RESOURCE_REWRITE_DISABLE": "Resource Rewrite disable",
     "RECONNECT": "Reconnect",
+    "THROTTLE_KBPS": "Throttle kbps",
     "BUFFER_ENABLED": "Buffer Enabled",
     "BUFFER_SIZE": "Buffer Size",
     "ENABLED": "Enabled",
