added rate limit config to web ui fixed number input problem

--- a/frontend/public/assets/i18n/en_common.json
+++ b/frontend/public/assets/i18n/en_common.json
@@ -85,7 +85,10 @@
     "XTREAM_CODES": "xtream codes",
     "XC": "xc",
     "M3U": "m3u",
-    "PLAYLIST_BROWSER": "Playlist Browser"
+    "PLAYLIST_BROWSER": "Playlist Browser",
+    "RATE_LIMIT": "Rate Limit",
+    "PERIOD_MILLIS": "Period Millis",
+    "BURST_SIZE": "Burst Size"
   },
   "TITLE": {
     "USER_BOUQUET_EDITOR": "User group editor"
