--- a/frontend/public/assets/i18n/en_common.json
+++ b/frontend/public/assets/i18n/en_common.json
@@ -24,7 +24,7 @@
     "UPDATE_ON_BOOT": "Update on boot",
     "WEB_UI": "Web UI",
     "USER_UI": "User UI",
-    "WEB_UI_PATH": "Web UI Path",
+    "WEB_UI_PATH": "Path prefix",
     "SCHEDULES": "Schedules",
     "SANITIZE_SENSITIVE_INFO": "Sanitize sensitive info",
     "ACTIVE_CLIENTS": "Active Clients",
@@ -89,8 +89,13 @@
     "PLAYLIST_BROWSER": "Playlist Browser",
     "RATE_LIMIT": "Rate Limit",
     "PERIOD_MILLIS": "Period Millis",
-    "BURST_SIZE": "Burst Size"
-  },
+    "BURST_SIZE": "Burst Size",
+    "WEB_AUTH":  "Auth",
+    "ISSUER": "Issuer",
+    "SECRET":  "Secret",
+    "USERFILE": "Userfile",
+    "UI_ENABLED": "UI"
+},
   "TITLE": {
     "USER_BOUQUET_EDITOR": "User group editor"
   },
@@ -153,6 +158,9 @@
       "PROXY": {
        "RESOURCE_REWRITE_DISABLE": "If activated the URL rewrite of resources in reverse proxy mode is disabled",
        "THROTTLE": "Supported units are KB/s,MB/s,KiB/s,MiB/s,kbps,mbps,Mibps"
+      },
+      "WEB_UI": {
+        "PATH": "Configuration of a path prefix, allowing it to be accessed behind a reverse proxy under a custom subpath. like https://yourdomain.com/m3uflt"
       }
     }
   }
