moved /status endpoint to /api/v1/status removed memory usage from healtcheck fixed multi provider VOD seek fixed some UI issues

--- a/frontend/public/assets/i18n/en_common.json
+++ b/frontend/public/assets/i18n/en_common.json
@@ -168,5 +168,15 @@
         "PATH": "Configuration of a path prefix, allowing it to be accessed behind a reverse proxy under a custom subpath. like https://yourdomain.com/m3uflt"
       }
     }
+  },
+  "SETUP":{
+    "LABEL": {
+      "NEXT": "Next",
+      "BACK": "Back",
+      "FINISH_SETUP": "Finish Setup"
+    },
+    "MSG": {
+      "WELCOME": "Welcome to m3u-filter setup. This wizard will guide you through the initial setup process."
+    }
   }
 }
