--- a/frontend/public/assets/i18n/en_common.json
+++ b/frontend/public/assets/i18n/en_common.json
@@ -111,7 +111,9 @@
     "PATTERN_IPV6": "Pattern IPv6",
     "IPv4": "IPv4",
     "IPv6": "IPv6",
-    "IP": "IP"
+    "IP": "IP",
+    "TARGET": "Target",
+    "TARGETS": "Targets"
   },
   "TITLE": {
     "USER_BOUQUET_EDITOR": "User group editor"
@@ -120,6 +122,7 @@
     "NO_CONTENT": "No content",
     "INVALID_REGEXP": "Invalid regexp",
     "INVALID_FILETYPE": "Invalid filetype",
+    "TARGET_NOT_EXISTS": "Target does not exist",
     "DOWNLOAD": {
       "SUCCESS": "Successfully downloaded",
       "FAIL": "Failed to download!",
