ui - renamed user to users

--- a/frontend/public/assets/i18n/de_common.json
+++ b/frontend/public/assets/i18n/de_common.json
@@ -38,6 +38,7 @@
     "CHAT_IDS": "Chat-IDs",
     "URL": "URL",
     "USER": "Benutzer",
+    "USERS": "Benutzer",
     "TOKEN": "Token",
     "WEB_SEARCH_URL": "Web-Such-URL",
     "EXTENSIONS": "Erweiterungen",
