--- a/frontend/public/assets/i18n/en_common.json
+++ b/frontend/public/assets/i18n/en_common.json
@@ -43,6 +43,7 @@
     "CHAT_IDS": "Chat Ids",
     "URL": "Url",
     "USER": "User",
+    "USERS": "Users",
     "TOKEN": "Token",
     "WEB_SEARCH_URL": "Web Search Url",
     "EXTENSIONS": "Extensions",
