refactored web ui video player refactored responsiveness

--- a/frontend/public/assets/i18n/en_common.json
+++ b/frontend/public/assets/i18n/en_common.json
@@ -116,7 +116,7 @@
     "IP": "IP",
     "TARGET": "Target",
     "TARGETS": "Targets",
-    "COMMENT": "Comment"
+    "NOTES": "Notes"
   },
   "TITLE": {
     "USER_BOUQUET_EDITOR": "User group editor"
