--- a/frontend/public/assets/i18n/en_common.json
+++ b/frontend/public/assets/i18n/en_common.json
@@ -197,7 +197,7 @@
       "FINISH_SETUP": "Finish Setup"
     },
     "MSG": {
-      "WELCOME": "Welcome to m3u-filter setup. This wizard will guide you through the initial setup process."
+      "WELCOME": "Welcome to tuliprox setup. This wizard will guide you through the initial setup process."
     }
   }
 }
